--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,24 +12,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - target: x86_64-pc-windows-gnu
-            archive: zip
-            runner: windows-latest
-          - target: x86_64-unknown-linux-musl
-            archive: tar.gz tar.xz tar.zst
-            runner: ubuntu-latest
-          - target: x86_64-apple-darwin
-            archive: zip
-            runner: macos-latest
-    runs-on: ${{ matrix.runner }}
+          - os: windows-latest
+          - os: ubuntu-latest
+          - os: macos-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - name: Build
         run: cargo build --release
-#      - name: Upload artifact
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: Binary
-#          path: |
-#            ${{ steps.compile.outputs.BUILT_ARCHIVE }}
-#            ${{ steps.compile.outputs.BUILT_CHECKSUM }}
