--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,3 +39,21 @@ jobs:
         with:
           name: bountui-${{ github.event.release.tag_name }}-${{ matrix.target }}
           path: target/release/${{ matrix.binary }}
+  add_release_assets:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: ./artifacts
+      - name: Install GitHub CLI
+        run: sudo apt-get install gh
+      - name: Authenticate GitHub CLI
+        run: echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
+      - name: Upload Release Assets
+        run: |
+          for file in ./artifacts/*; do
+            gh release upload ${{ github.event.release.tag_name }} "$file" --clobber
+          done
+        if: github.event_name == 'release'
