--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,6 +52,7 @@ jobs:
         run: sudo apt-get install gh
       - name: Authenticate GitHub CLI
         run: echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
+      - uses: actions/checkout@v4
       - name: Upload Release Assets
         run: |
           for file in ./artifacts/*; do
