--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,6 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download all artifacts
+        id: download_artifacts
         uses: actions/download-artifact@v4
         with:
           path: ./artifacts
@@ -55,7 +56,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Upload Release Assets
         run: |
-          for file in ./artifacts/*; do
+          for file in ${{ steps.download_artifacts.outputs.path }}/*; do
             gh release upload ${{ github.event.release.tag_name }} "$file" --clobber
           done
         if: github.event_name == 'release'
