--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Install GitHub CLI
         run: sudo apt-get install gh
       - name: Authenticate GitHub CLI
-        run: echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
+        run: echo ${{ secrets.PAT }} | gh auth login --with-token
       - uses: actions/checkout@v4
       - name: Download all artifacts
         id: download_artifacts
