--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,13 +2,12 @@ name: Build
 on:
   pull_request:
     branches:
-      - development
       - main
-  release:
-    types: [created]
+      - develop
+  push:
+    branches:
+      - main
   workflow_dispatch:
-env:
-  CARGO_TERM_COLOR: always
 jobs:
   build:
     strategy:
@@ -32,33 +31,43 @@ jobs:
       - name: Install target
         run: rustup target add ${{ matrix.target }}
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: Build
         run: cargo build --target ${{ matrix.target }} --release
       - name: Upload artifact
-        if: github.event_name == 'release'
         uses: actions/upload-artifact@v4
         with:
           name: bountui-${{ github.event.release.tag_name }}-${{ matrix.target }}
           path: target/${{ matrix.target }}/release/${{ matrix.binary }}
-  add_release_assets:
+          retention-days: 1
+  release:
     needs: build
     runs-on: ubuntu-latest
-    if: github.event_name == 'release'
+    if: github.ref == 'refs/heads/main'
     steps:
-      - name: Install GitHub CLI
-        run: sudo apt-get install gh
-      - name: Authenticate GitHub CLI
-        run: echo ${{ secrets.PAT }} | gh auth login --with-token
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+      - uses: actions/setup-node@v4.1.0
+        with:
+          node-version: 20.9.0
+      - name: Npm install
+        run: npm install
       - uses: actions/checkout@v4
       - name: Download all artifacts
         id: download_artifacts
         uses: actions/download-artifact@v4
         with:
           path: ./artifacts
-      - name: Upload Release Assets
+      - name: Zip artifacts
         run: |
           for file in ./artifacts/*; do
             zip_name=$(basename "$file").zip
             zip -rj $zip_name $file
-            gh release upload ${{ github.event.release.tag_name }} "$zip_name" --clobber
           done
+      - name: Semantic Release
+        id: semantic_release
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
