--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -111,7 +111,7 @@ jobs:
           sed -i "s|source=.*|source=(\"$src_tarball_url\")|" aur/PKGBUILD
           sed -i "s/sha256sums=.*/sha256sums=(\"$checksum\")/" aur/PKGBUILD
           cd aur
-          docker run --rm -v $GITHUB_WORKSPACE:/workspace -w /workspace archlinux:latest bash -c "
+          docker run --rm -v $GITHUB_WORKSPACE/aur:/workspace -w /workspace archlinux:latest bash -c "
             useradd -m builder && \
             chown -R builder:builder /workspace && \
             su builder -c 'makepkg --printsrcinfo > .SRCINFO'
