ci: fixed volume path

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -111,9 +111,8 @@ jobs:
           sed -i "s|source=.*|source=(\"$src_tarball_url\")|" aur/PKGBUILD
           sed -i "s/sha256sums=.*/sha256sums=(\"$checksum\")/" aur/PKGBUILD
           cd aur
-          docker run --rm -v $GITHUB_WORKSPACE/aur:/workspace -w /workspace archlinux:latest bash -c "
+          docker run --rm -v $GITHUB_WORKSPACE/aur:/workspace -w /workspace -u $(id -u):$(id -g) archlinux:latest bash -c "
             useradd -m builder && \
-            chown -R builder:builder /workspace && \
             su builder -c 'makepkg --printsrcinfo > .SRCINFO'
           "
           git add PKGBUILD
