--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ bon = "2.3.0"
 thiserror = "1"
 serde = { version = "1", features = ["derive", "std"] }
 serde_json = "1.0.128"
-itertools = "0.13.0"
 tui-input = "0.11.0"
 tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros", "sync", "process", "io-std", "io-util"] }
 tokio-util = "0.7.12"
-uuid = { version = "1.11.0", features = ["v4"] }
 log = "0.4.22"
 futures = "0.3.31"
 chrono = { version = "0.4", features = ["serde"] }
+mockall = "0.13.1"
+tokio-test = "0.4.4"
