--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ futures = "0.3.31"
 chrono = { version = "0.4", features = ["serde"] }
 mockall = "0.13.1"
 tokio-test = "0.4.4"
+arboard = "3.5.0"
