--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -127,16 +127,18 @@ jobs:
           git commit -m "Update PKGBUILD for v${{ needs.release.outputs.new_release_version }}"
           git push origin master
 
-  update_homebrew_formula:
+  update_tap:
     runs-on: ubuntu-latest
+    needs: release
+    if: needs.release.outputs.new_release_version
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: cedware/homebrew-test-formulas
-          token: ${{ secrets.PAT_HOMEBREW_REPO }}
+          repository: cedware/homebrew-formulas
+          token: ${{ secrets.PAT_GITHUB }}
       - name: update contents
         run: |
-          bin_archive=https://github.com/Cedware/bountui/releases/download/v0.4.0/bountui-0.4.0-aarch64-apple-darwin.zip
+          bin_archive=https://github.com/Cedware/bountui/releases/download/v${{ needs.release.outputs.new_release_version }}/bountui-${{ needs.release.outputs.new_release_version }}-aarch64-apple-darwin.zip
           curl -L $bin_archive -o bin.zip
           checksum=$(sha256sum bin.zip | cut -d ' ' -f 1)
           echo "checksum: $checksum"
@@ -145,5 +147,5 @@ jobs:
           git config --global user.email "cedware-dev@protonmail.com"
           git config --global user.name "Cedric Krause"
           git add .
-          git commit -m "Updated bountui formula to version x.y.z"
+          git commit -m "Updated bountui formula to version ${{ steps.get_version.outputs.new_release_version }}"
           git push
