--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,6 +34,9 @@ jobs:
           - runner: macos-latest
             binary: bountui
             target: aarch64-apple-darwin
+          - runner: ubuntu-24.04-arm
+            binary: bountui
+            target: aarch64-unknown-linux-gnu
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Install target
