--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ thiserror = "1"
 serde = { version = "1", features = ["derive", "std"] }
 serde_json = "1.0.128"
 tui-input = "0.11.0"
-tokio = { version = "1.43.1", features = ["rt", "rt-multi-thread", "macros", "sync", "process", "io-std", "io-util"] }
-tokio-util = "0.7.12"
+tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "sync", "process", "io-std", "io-util", "time"] }
+tokio-util = "0.7.15"
 log = "0.4.22"
 futures = "0.3.31"
 chrono = { version = "0.4", features = ["serde"] }
