--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -129,3 +129,26 @@ jobs:
           git add .SRCINFO
           git commit -m "Update PKGBUILD for v${{ needs.release.outputs.new_release_version }}"
           git push origin master
+
+  update_tap:
+    runs-on: ubuntu-latest
+    needs: release
+    if: needs.release.outputs.new_release_version
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: cedware/homebrew-formulas
+          token: ${{ secrets.PAT_GITHUB }}
+      - name: update contents
+        run: |
+          bin_archive=https://github.com/Cedware/bountui/releases/download/v${{ needs.release.outputs.new_release_version }}/bountui-${{ needs.release.outputs.new_release_version }}-aarch64-apple-darwin.zip
+          curl -L $bin_archive -o bin.zip
+          checksum=$(sha256sum bin.zip | cut -d ' ' -f 1)
+          echo "checksum: $checksum"
+          sed -i "s|^  url \".*\"|  url \"${bin_archive}\"|" Formula/bountui.rb
+          sed -i "s|^  sha256 \".*\"|  sha256 \"${checksum}\"|" Formula/bountui.rb
+          git config --global user.email "cedware-dev@protonmail.com"
+          git config --global user.name "Cedric Krause"
+          git add .
+          git commit -m "Updated bountui formula to version ${{ steps.get_version.outputs.new_release_version }}"
+          git push
