--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tokio-test = "0.4.4"
 arboard = "3.5.0"
 anyhow = "1.0.98"
 home = "0.5.11"
+flexi_logger = "0.29"
 
 [dev-dependencies]
 tempfile = "3.20.0"
